# ermi-command-center

./: .env.android  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  START-HERE.cmd  capacitor.config.json  diff.txt  index.html  package-lock.json  package.json  patch_api.py  patch_api_endpoints.py  patch_api_endpoints_2.py  patch_api_endpoints_3.py  pr_diff.txt  pr_review.md  pyproject.toml  review.diff  vite.config.js
.github/workflows/: ci.yml
android/app/: build.gradle
android/app/src/main/java/ai/knightbot/ermi/: MainActivity.java
android/app/src/main/res/values/: strings.xml
docs/: ALIASES.md  ANDROID_TERMUX.md  ARCHITECTURE.md  CHATLASSO_INTEGRATION.md  DEE_TORCH_POST_CLONE.md  GETTING_STARTED.md  INSTALLER.md  MVP_HANDOFF.md  OPERATIONS.md  ROADMAP.md  SIGNED_WINDOWS_INSTALLER.md
ermi/: __init__.py  api.py  chatlasso.py  cli.py  diagnostics.py  embeddings.py  entities.py  exports.py  flags.py  graph.py  ingest.py  ops.py  review.py  search.py  server.py  setup.py  storage.py  timeline.py  updater.py  watch.py
install/: Build-AndroidApk.ps1  Build-WindowsInstaller.ps1  Install-ERMI.cmd  Install-ERMI.ps1  Launch-ERMI.ps1  One-Click-Setup.ps1  Update-ERMI.ps1  termux-install.sh  termux-launch.sh
installer/: ERMI-Command-Center.iss
sample_data/chatgpt/: conversations.json
sample_data/chatlasso/11_SSI_Raw/: sample_ermi_setup_SSI.md
src/: main.jsx  styles.css
tests/: test_api.py  test_exports.py  test_ingest.py
