[project]
name = "ermi"
version = "0.1.0"
description = "Externalized Recursive Memory Infrastructure: local cognitive archive MVP."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
]

[project.optional-dependencies]
ml = ["sentence-transformers>=2.7.0"]
dev = ["pytest>=8.0.0"]

[project.scripts]
ermi = "ermi.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
